--- a/.github/workflows/docker-builderx.yml
+++ b/.github/workflows/docker-builderx.yml
@@ -22,6 +22,6 @@ jobs:
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
         run: make ci-docker-auth
       - name: Docker Buildx
-        run: make ci-docker-buildx
+        run: make ci-docker-buildx-push
       - name: Docker Build
         run: make ci-docker-push
