--- a/.github/workflows/docker-builderx.yml
+++ b/.github/workflows/docker-builderx.yml
@@ -23,5 +23,9 @@ jobs:
         run: make ci-docker-auth
       - name: Docker Buildx
         run: make ci-docker-buildx-push
+        env:
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
       - name: Docker Build
         run: make ci-docker-push
+        env:
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
