--- a/.github/workflows/docker-builderx.yml
+++ b/.github/workflows/docker-builderx.yml
@@ -23,3 +23,5 @@ jobs:
         run: make ci-docker-auth
       - name: Docker Buildx
         run: make ci-docker-buildx-push
+      - name: Docker Clean up
+        run: rm -rf /home/runner/.docker/config.json
