--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,6 @@
-name: docker buildx
+name: Test builds
 
-on: [push]
+on: push
 
 jobs:
   buildx:
@@ -16,8 +16,7 @@ jobs:
           qemu-version: latest
       - name: Available platforms
         run: echo ${{ steps.buildx.outputs.platforms }}
-      - name: Run Buildx
-        run: |
-          docker buildx build \
-            --platform linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64,linux/ppc64le,linux/s390x \
-            --output "type=image,push=false" .
+      - name: Docker Buildx
+        run: make ci-docker-buildx
+      - name: Docker Clean up
+        run: rm -rf /home/runner/.docker/config.json
